# hpu-talentchart

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  handoff.md
.claude/: launch.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260702_0001_create_organizations_users_rls.py  20260702_0002_create_ats_tables_rls.py  20260703_0003_create_test_sessions_rls.py  20260705_0004_add_employee_fields.py  20260705_0005_add_candidate_address.py  20260709_0006_create_astrology_reference.py  20260709_0007_add_candidate_gender.py  20260711_0008_create_daily_fortunes.py  20260712_0009_merge_pipeline_stages.py  20260713_0010_fortune_content.py  20260714_0011_departments.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  main.py
backend/app/core/: __init__.py  permissions.py  responses.py  security.py  tenant_context.py
backend/app/data/: __init__.py  archetypes.py  astrology_full.json  disc_questions.py  horoscope.py  zodiac_animals.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py  tenant.py
backend/app/models/: __init__.py  astrology.py  base.py  campaign.py  candidate.py  daily_fortune.py  department.py  fortune_content.py  job_post.py  organization.py  test_session.py  user.py
backend/app/routers/: auth.py  campaigns.py  candidates.py  department.py  epa.py  job_posts.py  organization.py  public_candidates.py  public_careers.py  public_tests.py  test_links.py  users.py
backend/app/schemas/: __init__.py  auth.py  campaign.py  candidate.py  department.py  job_post.py  organization.py  test_session.py  user.py
backend/app/services/: __init__.py  candidate_service.py  disc_service.py  google_auth.py
backend/app/services/epa/: __init__.py  archetype.py  biorhythm.py  canchi.py  compatibility.py  daily_fortune_store.py  fortune.py  fortune_content_store.py  lunar.py  narrative.py  reference_clean.py  tamhop.py  team_suggest.py
backend/app/tasks/: __init__.py  fortune_tasks.py
backend/scripts/: create_tenant.py  import_employees.py  reset_disc_test.py  seed_astrology.py  update_contacts.py
backend/tests/: conftest.py  test_admin.py  test_archetype.py  test_auth.py  test_biorhythm.py  test_campaigns.py  test_candidates.py  test_daily_fortune.py  test_departments.py  test_disc_flow.py  test_disc_parity.py  test_epa_api.py  test_epa_parity.py  test_fortune.py  test_fortune_content.py  test_google_auth.py  test_horoscope.py  test_job_posts.py  test_rbac.py  test_relationship.py  test_tenant_isolation.py  test_zodiac_animals.py
backend/tests/fixtures/: epa_parity_fortune_hr.json  generate_epa_fixture.mjs
docs/: API.md  DECISIONS.md  DEPLOY.md  PLAN.md  (+6 more)
(+62 files in other folders)
