[project]
name = "talentchart"
version = "0.1.0"
description = "Nền tảng SaaS tuyển dụng và đánh giá nhân sự tích hợp Eastern Personality Assessment (EPA)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.2.0",
    "minio>=7.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]
